--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "game",
     "slug": "game",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "landscape",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
@@ -23,7 +23,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "dagar.expo.app"
     },
     "web": {
       "favicon": "./assets/favicon.png"
